--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -33,6 +33,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #FFD52E;
 }
 
 button {
@@ -56,7 +57,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #f9f9f9;
     background-color: #ffffff;
   }
   a:hover {
@@ -65,4 +66,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+span {
+  color: #f9f9f9;
 }
