--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -15,11 +15,15 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #FFD52E;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #FFD52E;
+}
+
+html {
+  background-color: #242424;
 }
 
 body {
@@ -28,6 +32,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #242424;
 }
 
 h1 {
@@ -48,26 +53,32 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #FFD52E;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     color: #f9f9f9;
-    background-color: #ffffff;
+    background-color: #242424;
   }
   a:hover {
-    color: #747bff;
+    color: #FFD52E;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #242424;
   }
 }
 
 span {
-  color: #f9f9f9;
+  color: #242424;
+}
+
+@supports (-webkit-touch-callout: none) {
+  body {
+    height: -webkit-fill-available;
+  }
 }
