--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -5,3 +5,9 @@
   text-align: center;
   background-color: #242424;
 }
+
+ul {
+  display: block;
+  text-align: left;
+  padding-inline-start: 0;
+}
