--- a/Frontend/src/components/Item.css
+++ b/Frontend/src/components/Item.css
@@ -7,9 +7,9 @@
 }
 .item-container {
     display: flex;
-    align-items: center;
-    gap: 12px;
-    padding: 8px 0;
+    align-items: flex-start;
+    gap: 5px;
+    padding: 1px 0;
     list-style: none;
   }
 
