--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -12,8 +12,17 @@ ul {
   padding-inline-start: 0;
 }
 
-.submit-input-form {
+.input-form {
   padding: 8px 0;
-  flex-direction: column;
-  padding: 8px 0;
+  border-radius: 5rem;
+  margin: 0.5rem;
+}
+
+.glassy {
+  padding: 1rem;
+  background-color: #303030;
+  border-radius: 2rem;
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 1px 1px 0 rgb(103, 103, 103),
+    inset 0 0 5px rgb(113, 113, 113);
 }
